add testing and auth
